--- a/_sass/theme/layout.scss
+++ b/_sass/theme/layout.scss
@@ -8,7 +8,6 @@
 	font-size: 125%;
     background-color: $secondary-background-color;
 
-	box-shadow: 0px 0px $spacing-unit/2 $spacing-unit/10 ;
 	box-shadow: 0px 1px 3px rgba(darken($secondary-background-color, 10%), 12%);
 
 	.home {
